Sharing project improvements work in progress